2005-06-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-display-face): Correct the position in
	which Faces are inserted; use dolist.

2005-06-29  Didier Verna  <didier@xemacs.org>

	* gnus-art.el (article-display-face): display faces in correct
	order.

2005-06-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-nocem.el (gnus-nocem-verifyer): Default to pgg-verify.
	(gnus-nocem-check-article): Fetch the Type header.
	(gnus-nocem-message-wanted-p): Fix the way to examine types.
	(gnus-nocem-verify-issuer): Use functionp instead of fboundp.
	(gnus-nocem-enter-article): Make sure gnus-nocem-hashtb is initialized.

	* pgg.el (pgg-verify): Return the verification result.

2005-06-24  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-art.el (gnus-article-mode): Set `nobreak-char-display', not
	`show-nonbreak-escape'.

2005-06-23  Lute Kamstra  <lute@gnu.org>

	* gnus-art.el (gnus-article-mode): Use kill-all-local-variables.

	* dig.el (dig-mode):
	* smime.el (smime-mode): Use gnus-run-mode-hooks.

2005-06-21  Juanma Barranquero  <lekktu@gmail.com>

	* nnimap.el (nnimap-split-download-body): Fix spellings.

2005-06-16  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-art.el (gnus-article-encrypt-body):
	* gnus-cus.el (gnus-score-customize):
	* mm-extern.el (mm-extern-local-file, mm-inline-external-body):
	* pop3.el (pop3-user): Don't use `format' on `error' arguments.

2005-06-16  Miles Bader  <miles@gnu.org>

	* spam.el (spam): Remove "-face" suffix from face name.
	(spam-face): New backward-compatibility alias for renamed face.
	(spam-face, spam-initialize): Use renamed spam face.

	* message.el (message-header-to, message-header-cc)
	(message-header-subject, message-header-newsgroups)
	(message-header-other, message-header-name)
	(message-header-xheader, message-separator, message-cited-text)
	(message-mml): Remove "-face" suffix from face names.
	(message-header-to-face, message-header-cc-face)
	(message-header-subject-face, message-header-newsgroups-face)